--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 	<br>
 	<header>
 		<h2>SAURABH WAIKAR</h2>
-		<br>
 		<h3>Operations Engineering | Supply Chain | Industrial Engineering | Project/Product Management</h3>
 	</header>
-	<br>
 	<nav>
 		<a href="experience.html">Experience</a> 
 		<a href="projects.html">Projects</a> 
@@ -20,10 +18,10 @@
 		<a href="skills.html">Skills</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<br>
 	<section>
-		<p>Hello! My name is Saurabh and I am a highly ambitious Operations Engineer.</p>
-		<p>I enjoy improving processes by using Lean Six Sigma Methodologies.</p> 
+		<p>Hi I am a Six Sigma Green Belt Professional with 2 years of experience in Industrial & Operations Engineering, Project Management and Quality Assurance. In my current role as an Operations Engineering Intern, I work cross-functionally to identify improvement opportunities and to suggest cost effective solutions.</p>
+		<p>Professionally, I have a broad range of interests including Industrial & Operations Engineering, Project management, and Product management.</p> 
+		<p>Apart from my professional interests, my hobbies include hiking, reading and traveling!</p>
     </section>
     <br>
 </body>
