--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	 <nav>
-          <a href="index.html">Home</a><br>
-          <a href="experience.html">Experience</a><br> 
-		  <a href="education.html">Education</a><br> 
-		  <a href="skills.html">Skills</a><br>
+          <a href="index.html">Home</a>
+          <a href="experience.html">Experience</a> 
+		  <a href="education.html">Education</a> 
+		  <a href="skills.html">Skills</a>
 		  <a href="contact.html">Contact</a><br>
      </nav>
      <hr>
@@ -29,7 +29,7 @@
 	<h4>Fall 2017</h4>
 		<p><li>Implemented 5S, DMAIC process and Kanban system to standardize the work-flow and create a Lean sustainable environment.</li>
 		<li>Removed bottlenecks in the process by developing a stabilized inventory management method to optimize inventory in plant.</li>
-		<li>Performed a cause and effect analysis of the identified bottlenecks using the FMEA, Root Cause Analysis, and Pareto Charts.</li>
+		<li>Performed a cause and effect analysis of the identified bottlenecks using the PFMEA, Root Cause Analysis, and Pareto Charts.</li>
 		<li>Reduced overall process time by 11% to increase the manufacturing capacity of the plant and achieve desired production targets.</li>
 		</p>
 	<br>
@@ -63,5 +63,22 @@
 		<li>Balance Sheets, Income statements and Cash flow statements for each company were also analyzed.</li>
 		</p>
 	<br>
+	<h2>Design and Manufacturing of a low cost Metal Chip Briquetting Machine </h2>
+	<h3>University of Pune</h3>
+	<h4>August 2014 - April 2015</h4>
+		<p><li>Developed the solution for the industrial problems incurred in industries due to metal chips with the help of the briquetting machine.</li>
+		<li>Undertook Manufacturing, Production scheduling of the project and ensured compliance with industry regulations.</li>
+		<li>Increased the functional floor space area up to 8% by reducing metal waste accumulation area. </li> 
+		<li>Reduced the transportation cost related to metal waste recycling by 5%.</li>
+		</p>
+	<br>
+	<h2>Process Sheet design for a Shaft of a Shaving Fixture for Batch and Mass Production </h2>
+	<h3>University of Pune</h3>
+	<h4>August 2013 - February 2014</h4>
+		<p><li>Performed detailed analysis of the component part print, material evaluation, Selection of Manufacturing Process, Selection of Manufacturing Equipment, Design of Jigs and Fixtures, Quality Assurance Techniques and economic analysis of Process planning.</li>
+		
+		</p>
+	<br>
+
 </body>
 </html>
