--- a/skills.html
+++ b/skills.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	 <nav>
-          <a href="index.html">Home</a><br>
-          <a href="experience.html">Experience</a><br> 
-		  <a href="projects.html">Projects</a><br> 
-		  <a href="education.html">Education</a><br> 
+          <a href="index.html">Home</a>
+          <a href="experience.html">Experience</a>
+		  <a href="projects.html">Projects</a> 
+		  <a href="education.html">Education</a>
 		  <a href="contact.html">Contact</a><br> 
      </nav>
      <hr>
@@ -26,10 +26,14 @@
 		<h3>R Programming</h3>
 		<h3>SQL</h3>
 		<h3>Tableau</h3>
-		<h3>Agile</h3>
-		<h3>SCRUM</h3> 
 		<h3>SAP</h3>
-		<h3>CAD</h3>
+		<h3>AutoCAD</h3>
+		<h3>Supply Chain Management</h3>
+		<h3>NPI</h3>
+		<h3>Capacity Modeling</h3>
+		<h3>Inventory Management</h3>
+		<h3>Statistical Process Control (SPC)</h3>
+
 	</header>
 	
 </body>
