--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	 <nav>
-          <a href="index.html">Home</a><br>
-          <a href="experience.html">Experience</a><br> 
-		  <a href="projects.html">Projects</a><br>
-		  <a href="education.html">Education</a><br> 
+          <a href="index.html">Home</a>
+          <a href="experience.html">Experience</a>
+		  <a href="projects.html">Projects</a>
+		  <a href="education.html">Education</a>
 		  <a href="skills.html">Skills</a><br>
      </nav>
      <hr>
