--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 		<h2>Contact</h2>
 	<div>
 		<img src="ln.png" class="linkedin" alt="linkedin">
-		<p>https://www.linkedin.com/in/saurabhwaikar/</p>
+		<a href="https://www.linkedin.com/in/swaikar/">linkedin.com/in/swaikar/</a>
 		<img src="gmail.png" class="gmail" alt="gmail">
 		<p>saurabh.waikar19@gmail.com</p>
 		<img src="whatsapp.png" class="whatsapp" alt="phone"><p>+1(669)-204-2806</p>
