--- a/education.html
+++ b/education.html
@@ -13,18 +13,19 @@
           <a href="contact.html">Contact</a><br> 
      </nav>
      <hr>
+     <h2>Education</h2><br>
 	<h2>Master of Science - Engineering Management </h2>
 	<h3>San José State University, California, USA</h3>
 	<h4>August 2017 - May 2019</h4>
     <p> Relevant Coursework:
-    	PManaging of Lean Enterprise Improvement Program, Leading Six Sigma, Advanced Supply Chain Management, Operations Research, Production Planning, Systems Engineering, Data Mining, Financial Engineering, Logistics for Healthcare delivery systems
+    	Managing of Lean Enterprise Improvement Program, Leading Six Sigma, Advanced Supply Chain Management, Operations Research, Production Planning, Systems Engineering, Data Mining, Financial Engineering, Logistics for Healthcare delivery systems
     </p>
     <br>
     <h2>Bachelor of Engineering - Production Engineering </h2>
     <h3>Savitribai Phule Pune University (formerly University of Pune), Pune City, India</h3>
     <h4>June 2011 - June 2015</h4>
     <p> Relevant Coursework:
-    	Process Planning, Operations Research, Ergonmics and Human Factors, Production Management, Industrial Engineering, Quality Assurance, Industrial Organization and Management
+    	Process Planning, Operations Research, Ergonomics and Human Factors, Production Management, Industrial Engineering, Quality Assurance, Industrial Organization and Management
    	</p>
 </body>
 </html>
