--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 		  <a href="contact.html">Contact</a><br>
      </nav>
      <hr>
-	
+	<h2>Projects</h2><br>
 	<h2>Jaquar India Warehouse and Distribution Network Strategy Enhancement</h2>
 	<h3>San Jose State University</h3>
 	<h4>Fall 2017</h4>
